--- a/_posts/zsa-moonlander-review/60-days-with-the-zsa-moonlander-review.Rmd
+++ b/_posts/zsa-moonlander-review/60-days-with-the-zsa-moonlander-review.Rmd
@@ -49,7 +49,7 @@ last 4 or so years has been the Microsoft Sculpt.
 
 For the most part the Moonlander felt like a premium device. Its surfaces felt
 good under my hands. The key caps are subtly textured and ever so slightly
-grippy. They felt weighty and durable. They typing sounds were thick and
+grippy. They felt weighty and durable. The typing sounds were thick and
 substantial, without being excessively loud ^[although a lot of this is due to my initial choice of a linear switch.]. It gave a very tidy first impression.
 
 I do have one nitpick: The mechanism in the tenting legs felt flimsy. When rotating them I could feel a
