add missing word

--- a/_posts/zsa-moonlander-review/60-days-with-the-zsa-moonlander-review.Rmd
+++ b/_posts/zsa-moonlander-review/60-days-with-the-zsa-moonlander-review.Rmd
@@ -63,7 +63,7 @@ feel caution was required.
 
 This is an important one for me. I can't afford two Moonlanders, so I needed it
 to be able accompany me in a bicycle pannier bag on my daily commute. Also
-setting and tearing down had to be reasonably low effort.
+setting up and tearing down had to be reasonably low effort.
 
 A big strike against the Moonlander in this regard is the lack of rigid case.
 For a device in this price range it was a let down. What was provided wasn't
