--- a/_posts/zsa-moonlander-review/60-days-with-the-zsa-moonlander-review.Rmd
+++ b/_posts/zsa-moonlander-review/60-days-with-the-zsa-moonlander-review.Rmd
@@ -84,7 +84,7 @@ at around a kilo. I didn't notice the weight on the bike, but you would in a
 backpack, particularly since it is dense weight. Heavy enough to notice, not
 heavy enough to be an issue I think.
 
-The setup and tear down process does feel a bit cumbersome at first. The fit of
+The setup and tear down process did feel a bit cumbersome at first. The fit of
 the allen key in the tenting screws was quite tight, so I found myself always
 having to concentrate to slot it in. Perhaps the most difficult thing to get
 down was that the left thumb cluster screw is reverse threaded. "Lift-to-loosen"
