--- a/about.Rmd
+++ b/about.Rmd
@@ -12,4 +12,4 @@ Find me online:
 
   - `r fontawesome::fa("twitter")` [`@milesmcbain`](https://www.twitter.com/milesmcbain)
   - `r fontawesome::fa("github")` [`@milesmcbain`](https://www.github.com/milesmcbain)
-  - [`micro.blog/mliesmcbain`](https://micro.blog/milesmcbain)
+  - [`micro.blog/milesmcbain`](https://micro.blog/milesmcbain)
